installed useful libraries

--- a/index.html
+++ b/index.html
@@ -5,9 +5,39 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Document</title>
+    <!---- Box Icons ---->
+    <link href='https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'>
+
+
+    <!----  CSS -->
+    <link rel="stylesheet" href="assets/css/styles.css">
+    <title>ChowBeta</title>
 </head>
 <body>
+
+    <!------ Scroll Top -->
+
+    <!------ Header ------>
+    <header class="l-header" id="header">
+
+    </header>
+
+    <main class="l-main">
+
+    </main>
+
+    <!------ Footer ------>
+    <footer class="footer section bd-container">
+
+    </footer>
+
+
+    <!-----Scroll Reaveal-->
+    <script src="https://unpkg.com/scrollreveal"></script>
+
+
+    <!------Main JS-->
+    <script src="js/main.js"></script>
     
 </body>
 </html>
