--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
         <!--=============== CSS ===============-->
         <link rel="stylesheet" href="css/style.css">
 
-        <title>ChowBeta - Ameer Bamigbayan</title>
+        <title>ChowBeta</title>
     </head>
     <body>
         <!--==================== HEADER ====================-->
         <header class="header" id="header">
-            
+            <na
         </header>
 
         <!--==================== MAIN ====================-->
