header html code

--- a/index.html
+++ b/index.html
@@ -18,7 +18,28 @@
     <body>
         <!--==================== HEADER ====================-->
         <header class="header" id="header">
-            <na
+            <nav class="nav container">
+                <a href="#" class="nav-logo">
+                    <img src="img/logo.png" alt="logo">
+                </a>
+
+                <div class="nav-menu" id="nav-menu">
+                    <ul class="nav-list grid">
+                        <li class="nav-item">
+                            <a href="#home" class="nav-link">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="#about" class="nav-link">About</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="#popular" class="nav-link">Popular</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="recent" class="nav-link">Recent</a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
         </header>
 
         <!--==================== MAIN ====================-->
