--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
                     <div class="nav-close" id="nav-close">
                         <i class="ri-close-line"></i>
                     </div>
+
+                    <img src="img/wings.png" alt="" class="nav-img-1">
+                    <img src="img/spice.png" alt="" class="nav-img-2">
                     
                     
                 </div>
