added theme toggle button

--- a/index.html
+++ b/index.html
@@ -45,9 +45,18 @@
                     </div>
 
                     <img src="img/wings.png" alt="" class="nav-img-1">
-                    <img src="img/spice.png" alt="" class="nav-img-2">
-                    
-                    
+                    <img src="img/spice.png" alt="" class="nav-img-2">     
+                </div>
+
+                <div class="nav-btns">
+                    <!----Theme Change Button-->
+                    <!---<i class="ri-moon-line change-theme" id="theme-button"></i>>
+
+                    <!-----Toggle Button-->
+                    <div class="nav-toggle" id="nav-toggle">
+                        <i class="ri-apps-2-line"></i>
+
+                    </div>
                 </div>
             </nav>
         </header>
