added menu functionality(show & hide)

--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
                         <i class="ri-close-line"></i>
                     </div>
 
-                    <img src="img/wings.png" alt="" class="nav-img-1">
-                    <img src="img/spice.png" alt="" class="nav-img-2">     
+                  <!---- <img src="img/wings.png" alt="" class="nav-img-1">
+                    <img src="img/spice.png" alt="" class="nav-img-2"> --> 
                 </div>
 
                 <div class="nav-btns">
