styled hero section

--- a/index.html
+++ b/index.html
@@ -75,11 +75,22 @@
 
 
                         <div>
-                            
+                            <img src="img/home-title.png" alt="home-title-image">
+                            Nigerian Meals
                         </div>
                     </h1>
+
+                    <p class="home-description">
+                        Enjoy a grat meal with the best dishea from Nigeria to satisfy your cravings
+                    </p>
+
+                    <a href="" class="button">
+                        Order now <i class="ri-arrow-right-line"></i>
+                    </a>
                 </div>
   </div>
+
+                   
             </section>
 
             <!--==================== ABOUT ====================-->
