--- a/index.html
+++ b/index.html
@@ -95,7 +95,25 @@
 
             <!--==================== ABOUT ====================-->
             <section class="about section" id="about">
-                
+                <div class="about-container container grid">
+                    <div class="about-data">
+                        <span class="section-subtitle">About Us</span>
+                        <h2 class="section-title about-title">
+                           <div>
+                            We Serve
+                            <img src="img/jollof-rice-title.png" alt="about-title-image">
+                           </div>
+
+                           Nigerian Delicacies 
+                        </h2>
+
+                        <p class="about-description">
+                            Welcome to ChowBeta, your passport to the delightful world of Nigerian cuisine! From the iconic jollof rice to the fiery suya, from the sweet delight of puff puff to the hearty goodness of egusi soup, ChowBeta is your gateway to the captivating and culturally significant dishes that define Nigerian gastronomy. 
+                        </p>
+                    </div>
+
+                    <img src="img/egusi.png" alt="about-image" class="about-img">
+                </div>  
             </section>
 
             <!--==================== POPULAR ====================-->
