--- a/index.html
+++ b/index.html
@@ -118,7 +118,14 @@
 
             <!--==================== POPULAR ====================-->
             <section class="popular section" id="popular">
-                
+                <span class="section-subtitle">The Best Food</span>
+                <h2 class="section-title">Popular Dishes</h2>
+
+                <div class="popular-container container grid">
+                    <article class="popular-card">
+                        <img src="" alt="" class="popular">
+                    </article>
+                </div>
             </section>
 
             <!--==================== RECENT ====================-->
