html for "popular" section

--- a/index.html
+++ b/index.html
@@ -118,12 +118,41 @@
 
             <!--==================== POPULAR ====================-->
             <section class="popular section" id="popular">
-                <span class="section-subtitle">The Best Food</span>
+                <span class="section-subtitle">Betá Food</span>
                 <h2 class="section-title">Popular Dishes</h2>
 
                 <div class="popular-container container grid">
                     <article class="popular-card">
-                        <img src="" alt="" class="popular">
+                        <img src="img/suya.png" alt="" class="popular">
+
+                        <h3 class="popular-name">Assorted Suya</h3>
+                    <span class="popular-description">Street Favourite</span>
+                    <span class="popular-price">₦8,500.00</span>
+                    <button class="popular-button">
+                        <i class="ri-shopping-bag-line"></i>
+                    </button>
+                    </article>
+
+                    <article class="popular-card">
+                        <img src="img/oha-soup.png" alt="" class="popular">
+
+                        <h3 class="popular-name">Oha Soup</h3>
+                    <span class="popular-description">Ofe Oha</span>
+                    <span class="popular-price">₦11,000.00</span>
+                    <button class="popular-button">
+                        <i class="ri-shopping-bag-line"></i>
+                    </button>
+                    </article>
+
+                    <article class="popular-card">
+                        <img src="img/banga.png" alt="" class="popular">
+
+                        <h3 class="popular-name">Banga Soup</h3>
+                    <span class="popular-description">Palm nut Soup</span>
+                    <span class="popular-price">₦15,000.00</span>
+                    <button class="popular-button">
+                        <i class="ri-shopping-bag-line"></i>
+                    </button>
                     </article>
                 </div>
             </section>
