--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 
                 <div class="popular-container container grid">
                     <article class="popular-card">
-                        <img src="img/suya.png" alt="" class="popular">
+                        <img src="img/suya.png" alt="" class="popular-img">
 
                         <h3 class="popular-name">Assorted Suya</h3>
                     <span class="popular-description">Street Favourite</span>
@@ -134,7 +134,7 @@
                     </article>
 
                     <article class="popular-card">
-                        <img src="img/oha-soup.png" alt="" class="popular">
+                        <img src="img/oha-soup.png" alt="" class="popular-img">
 
                         <h3 class="popular-name">Oha Soup</h3>
                     <span class="popular-description">Ofe Oha</span>
@@ -145,7 +145,7 @@
                     </article>
 
                     <article class="popular-card">
-                        <img src="img/banga.png" alt="" class="popular">
+                        <img src="img/banga.png" alt="" class="popular-img">
 
                         <h3 class="popular-name">Banga Soup</h3>
                     <span class="popular-description">Palm nut Soup</span>
