html for "recently added" section

--- a/index.html
+++ b/index.html
@@ -159,6 +159,28 @@
 
             <!--==================== RECENT ====================-->
             <section class="recent section" id="recent">
+                <section class="recently section" id="recently">
+                    <div class="recently-container container grid">
+                        <div class="recently-data">
+                            <span class="section-subtitle">Recently Added</span>
+                            <h2 class="section-title">
+                                Smoky Party<br>
+                                Jollof Rice
+                            </h2>
+                      
+
+                        <p class="recently-description">
+                            This sensational dish combines the rich and savory essence of classic Jollof Rice with a tantalizing smokiness that takes it to a whole new level of deliciousness.
+                        </p>
+
+                        <a href="#" class="button">
+                            Order now <i class="ri-arrow-right-line"></i>
+                        </a>
+                    </div>
+
+                    <img src="img/jollof-rice-recent.png" alt="recently-img" class="recently-img">
+                  </div>
+                </section>
                 
             </section>
 
