styled "newsletter section"

--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                             <span class="section-subtitle">Newsletter</span>
                             <h2 class="section-title">
                                 Subscribe For<br>
-                                Updates
+                                Tasty Updates
                             </h2>
 
                             <form action="" class="newsletter-form">
@@ -203,7 +203,7 @@
                         </div>
                     </div>
 
-                    
+
                 </div>
                 
             </section>
