--- a/index.html
+++ b/index.html
@@ -211,8 +211,96 @@
 
         <!--==================== FOOTER ====================-->
         <footer class="footer">
+              <div class="footer-container grid">
+                <div>
+                    <a href="#" class="footer-logo">
+                        <img src="img/logo.png" alt="footer logo">
+                    </a>
+
+                    <p class="footer-description">
+                        Discover the heart and soul of Nigerian cuisine<br>
+                        at ChowBeta - your premier source for authentic<br>
+                        recipes and culinary inspiration.
+                    </p>
+                </div>
+
+                <div class="foooter-content">
+                    <div>
+                        <h3 class="footer-title">Useful Links</h3>
+                        <ul class="footer-links">
+                            <li>
+                                <a href="#" class="footer-link">Home</a>
+                            </li>
+                            <li>
+                                <a href="#" class="footer-link">About</a>
+                            </li>
+                            <li>
+                                <a href="#" class="footer-link">Popular</a>
+                            </li>
+                            <li>
+                                <a href="#" class="footer-link">Recent</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div>
+                        <h3 class="footer-title">Information</h3>
+                        <ul class="footer-links">
+                            <li>
+                                <a href="#" class="footer-link">Contact</a>
+                            </li>
+                            <li>
+                                <a href="#" class="footer-link">Orders & Returns</a>
+                            </li>
+                            <li>
+                                <a href="#" class="footer-link">Prices</a>
+                            </li>
+                            <li>
+                                <a href="#" class="footer-link">Reservation</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div>
+                        <h3 class="footer-title">Address</h3>
+                        <ul class="footer-links">
+                            <li class="footer-information">
+                                94, Bayo Street <br>
+                                Lagos, Nigeria
+                            </li>
+                            <li class="footer-information">
+                               7AM - 11PM
+                            </li>
+                        </ul>
+                    </div>
+                    <div>
+                        <h3 class="footer-title"></h3>
+                        <ul class="footer-social">
+                             <a href="#" target="_blank" class="social-footer-link">
+                                <i class="ri-facebook-circle-fill"></i>
+                             </a>
+                             <a href="#" target="_blank" class="social-footer-link">
+                                <i class="ri-instagram-fill"></i>
+                             </a>
+                             <a href="#" target="_blank" class="social-footer-link">
+                                <i class="ri-twitter-fill"></i>
+                             </a>
+                        </ul>
+                    </div>
+                </div>
+              </div>
             
+              <div class="footer-info container">
+                <div class="footer-card">
+                    <img src="img/footer-card-1.png">
+                    <img src="img/footer-card-2.png">
+                    <img src="img/footer-card-3.png">
+                    <img src="img/footer-card-4.png">
+                </div>
+                <span class="footer-copy">
+                   Developed with ❤ by Ameer Bamigbayan
+                </span>
+              </div>
         </footer>
+
 
         <!--========== SCROLL UP ==========-->
 
