--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
 
         <!--==================== FOOTER ====================-->
         <footer class="footer">
-              <div class="footer-container grid">
+              <div class="footer-container container grid">
                 <div>
                     <a href="#" class="footer-logo">
                         <img src="img/logo.png" alt="footer logo">
@@ -224,7 +224,7 @@
                     </p>
                 </div>
 
-                <div class="foooter-content">
+                <div class="footer-content">
                     <div>
                         <h3 class="footer-title">Useful Links</h3>
                         <ul class="footer-links">
@@ -272,15 +272,15 @@
                         </ul>
                     </div>
                     <div>
-                        <h3 class="footer-title"></h3>
+                        <h3 class="footer-title">Social Media</h3>
                         <ul class="footer-social">
-                             <a href="#" target="_blank" class="social-footer-link">
+                             <a href="#" target="_blank" class="footer-social-link">
                                 <i class="ri-facebook-circle-fill"></i>
                              </a>
-                             <a href="#" target="_blank" class="social-footer-link">
+                             <a href="#" target="_blank" class="footer-social-link">
                                 <i class="ri-instagram-fill"></i>
                              </a>
-                             <a href="#" target="_blank" class="social-footer-link">
+                             <a href="#" target="_blank" class="footer-social-link">
                                 <i class="ri-twitter-fill"></i>
                              </a>
                         </ul>
