added link to name in copyright

--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
                     <img src="img/footer-card-4.png">
                 </div>
                 <span class="footer-copy">
-                   Developed with ❤ by Ameer Bamigbayan
+                   Developed with ❤ by <a href="https://ameerbamigbayan.com.ng" target="_blank">Ameer Bamigbayan</a>
                 </span>
               </div>
         </footer>
