corrected hero-section description👍

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                     </h1>
 
                     <p class="home-description">
-                        Enjoy a grat meal with the best dishea from Nigeria to satisfy your cravings
+                        Enjoy a great meal with the best dishes from Nigeria to satisfy your cravings
                     </p>
 
                     <a href="" class="button">
