Responsiveness for larger devices - 1024px💻

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <main class="main">
             <!--==================== HOME ====================-->
             <section class="home section" id="home">
-                <div class="home-comtainer continer grid">
+                <div class="home-container container grid">
                     <img src="img/home-jollof-rice.png" alt="" class="home-img">
               
                 
@@ -81,7 +81,7 @@
                     </h1>
 
                     <p class="home-description">
-                        Enjoy a great meal with the best dishes from Nigeria to satisfy your cravings
+                        Enjoy a great meal with the best<br> dishes from Nigeria to satisfy<br> your cravings
                     </p>
 
                     <a href="" class="button">
