changes to font sizes and colors👍

--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
                         Enjoy Delicious
 
 
-                        <div>
+                        <div>  
+                            Nigerian<span> Meals</span>
                             <img src="img/home-title.png" alt="home-title-image">
-                            Nigerian Meals
                         </div>
                     </h1>
 
@@ -164,7 +164,7 @@
                             <span class="section-subtitle">Recently Added</span>
                             <h2 class="section-title">
                                 Smoky Party<br>
-                                Jollof Rice
+                                Jollof <span>Rice</span>
                             </h2>
                       
 
