added scroll animations🎞

--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
 
 
         <!--=============== SCROLLREVEAL ===============-->
-        <script src=""></script>
+        <script src="js/scrollreveal.min.js"></script>
 
         <!--=============== MAIN JS ===============-->
         <script src="js/main.js"></script>
