linked Recent menu link🔗

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                             <a href="#popular" class="nav-link">Popular</a>
                         </li>
                         <li class="nav-item">
-                            <a href="#recent" class="nav-link">Recent</a>
+                            <a href="#recently" class="nav-link">Recent</a>
                         </li>
                     </ul>
 
