--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <!--==================== HOME ====================-->
             <section class="home section" id="home">
                 <div class="home-container container grid">
-                    <img src="img/home-jollof-rice.png" alt="" class="home-img">
+                    <img src="img/home-jollof-rice.png" alt="home-img" class="home-img">
               
                 
                 <div class="home-data">
@@ -123,7 +123,7 @@
 
                 <div class="popular-container container grid">
                     <article class="popular-card">
-                        <img src="img/suya.png" alt="" class="popular-img">
+                        <img src="img/suya.png" alt="suya" class="popular-img">
 
                         <h3 class="popular-name">Assorted Suya</h3>
                     <span class="popular-description">Street Favourite</span>
@@ -134,7 +134,7 @@
                     </article>
 
                     <article class="popular-card">
-                        <img src="img/oha-soup.png" alt="" class="popular-img">
+                        <img src="img/oha-soup.png" alt="oha-soup" class="popular-img">
 
                         <h3 class="popular-name">Oha Soup</h3>
                     <span class="popular-description">Ofe Oha</span>
@@ -145,7 +145,7 @@
                     </article>
 
                     <article class="popular-card">
-                        <img src="img/banga.png" alt="" class="popular-img">
+                        <img src="img/banga.png" alt="banga-soup" class="popular-img">
 
                         <h3 class="popular-name">Banga Soup</h3>
                     <span class="popular-description">Palm nut Soup</span>
